fix css on mobile + tweak to optimize infinite scroll

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -101,7 +101,7 @@
 .showcase-section {
   padding: 50px 0;
   border-bottom: 1px solid #ddd;
-  &:last-of-type {
+  &.last {
     border-bottom: 0;
   }
 }
@@ -146,12 +146,10 @@
   right: -50px;
 }
 .thumbs-carousel {
-  // margin-left: -10px;
-  // margin-right: 0px;
-  margin-bottom: 30px;
+  &.slick-initialized {
+    margin-bottom: 30px;
+  }
   .slick-slide {
-    // padding-right: 0px;
-    // padding-left: 10px;
     .thumb {
       margin-bottom: 0;
     }
@@ -278,32 +276,69 @@
 .suggestions {
   margin-bottom: 30px;
   h3 {
-    display: inline;
     margin: 0;
-    margin-right: 30px;
     font-size: 1em;
     font-weight: bold;
   }
   ul {
-    display: inline;
-    margin-left: -15px;
+    list-style: none;
+    padding: 0;
     li {
-      padding-left: 15px;
-      padding-right: 15px;
     }
     a {
       font-weight: bold;
       font-size: .9em;
     }
-    .tag {
-      color: #555;
-      border-color: #666;
-      font-size: .9em;
-      padding: 6px 9px;
-      &:hover {
-        color: #fff;
-        background: #666;
+  }
+}
+@media (min-width: 768px) {
+  .suggestions {
+    h3 {
+      display: inline;
+      margin-right: 30px;
+    }
+    ul {
+      display: inline;
+      margin-left: -15px;
+      li {
+        display: inline-block;
+        padding-left: 15px;
+        padding-right: 15px;
       }
     }
+  }
+}
+@media (max-width: 768px) {
+  .suggestions {
+    text-align: center;
+    h3 {
+      margin-bottom: 10px;
+    }
+    ul {
+      li {
+        margin-bottom: 3px;
+      }
+    }
+  }
+}
+
+#infinite-scrolling {
+  .page {
+    visibility: hidden;
+    &.visible {
+      visibility: visible;
+    }
+  }
+}
+
+.category-full-row {
+  margin-left: -3px;
+  margin-right: -3px;
+}
+.category-full-col {
+  padding-left: 3px;
+  padding-right: 3px;
+  .category-thumb {
+    margin-bottom: 6px;
   }
 }
